--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "https://github.com/alirezamdz/Boilerplate4NodeJsApp/issues"
   },
   "dependencies": {
+    "app-root-path": "2.0.1",
     "body-parser": "~1.13.2",
     "config": "^1.20.2",
     "cookie-parser": "~1.3.5",
