--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "url": "https://github.com/alirezamdz/Boilerplate4NodeJsApp/issues"
   },
   "dependencies": {
-    "app-root-path": "2.0.1",
+    "app-root-path": "~2.0.1",
     "body-parser": "~1.13.2",
-    "config": "^1.20.2",
+    "config": "~1.20.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
@@ -25,7 +25,8 @@
     "mongoose": "~3.6.19",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "stylus": "0.42.3"
+    "stylus": "~0.42.3",
+    "use-strict": "~1.0.1"
   },
   "devDependencies": {},
   "license": "MIT"
